# zentunes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_zentunes.py
zentunes/: zentunes.py
zentunes/lib/: playht.py
