[tool.poetry]
name = "zentunes"
version = "0.1.0"
description = "Generate audio from text."
authors = ["Shane Dowling"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eyed3 = "^0.9.7"
pydub = "^0.25.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
pre-commit = "^3.5.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zentunes = 'zentunes.zentunes:main'